--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "@tailwindcss/vite": "^4.2.1",
     "@types/express": "^5.0.6",
     "@types/node": "^25.3.2",
+    "@types/sharp": "^0.31.1",
+    "sharp": "^0.34.5",
     "tailwindcss": "^4.2.1",
     "ts-node": "^10.9.2",
     "tsx": "^4.21.0",
